| Bug #3157 | Crash if stored procedure contains IF EXISTS | ||
|---|---|---|---|
| Submitted: | 12 Mar 2004 10:40 | Modified: | 24 Aug 2004 16:23 |
| Reporter: | Peter Gulutzan | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server | Severity: | S3 (Non-critical) |
| Version: | 5.0.1-alpha-debug | OS: | Linux (SuSE 8.2) |
| Assigned to: | Per-Erik Martin | CPU Architecture: | Any |
[12 Mar 2004 10:40]
Peter Gulutzan
[12 Mar 2004 13:44]
Dean Ellis
Verified against 5.0.1-alpha-log.
[24 Aug 2004 16:23]
Per-Erik Martin
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html
