Fixed BUG#3157: Crash if stored procedure contains IF EXISTS, and BUG#336: Subselects with tables does not work as values for local SP variables (which was closed before with a temp. fix, but not actually fixed).